# learning_wgpu

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  shader.wgsl
